--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -129,6 +129,14 @@
 /*----------------------------------------------------*/
 @import "inner_page/service-details";
 /*---------------------------------------------------- */
+/*Gallery Page*/
+/*----------------------------------------------------*/
+@import "inner_page/gallery";
+/*---------------------------------------------------- */
+/*Blog Page*/
+/*----------------------------------------------------*/
+@import "inner_page/blog-page";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
