--- a/assets/scss/_predefine.scss
+++ b/assets/scss/_predefine.scss
@@ -262,9 +262,9 @@ select:visited {
 }
 @keyframes vt-spin {
 	50% {
-        -webkit-transform: scaleY(0);
-        transform: scaleY(0)
-    }
+		-webkit-transform: scaleY(0);
+		transform: scaleY(0)
+	}
 }
 .vt-btn {
 	a {
@@ -410,6 +410,28 @@ select:visited {
 .section_border_radius {
 	border-bottom-left-radius: 24px;
 	border-bottom-right-radius: 24px;
+}
+.vt-pagination {
+	ul {
+		display: flex;
+		justify-content: center;
+	}
+	li {
+		width: 59px;
+		height: 59px;
+		display: flex !important;
+		align-items: center;
+		justify-content: center;
+		background-color: #E7E7E7;
+		a {
+			width: 43px;
+			height: 43px;
+			display: flex;
+			align-items: center;
+			background-color: #fff;
+			justify-content: center;
+		}
+	}
 }
 // txa-common-css-start
 
