--- a/assets/scss/inner_page/_office.scss
+++ b/assets/scss/inner_page/_office.scss
@@ -5,6 +5,17 @@
 			max-width: 592px;
 		}
 	}
+	.contact-pattern {
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 436px;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 }
 .vt-office-feed-content {
 	.col-lg-4 {
