--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -137,6 +137,22 @@
 /*----------------------------------------------------*/
 @import "inner_page/blog-page";
 /*---------------------------------------------------- */
+/*Blog Details Page*/
+/*----------------------------------------------------*/
+@import "inner_page/blog-details";
+/*---------------------------------------------------- */
+/*Contact Page*/
+/*----------------------------------------------------*/
+@import "inner_page/contact-page";
+/*---------------------------------------------------- */
+/*Success Page*/
+/*----------------------------------------------------*/
+@import "inner_page/successfull";
+/*---------------------------------------------------- */
+/*Coming Soon Page*/
+/*----------------------------------------------------*/
+@import "inner_page/coming-soon";
+/*---------------------------------------------------- */
 /*Footer Section*/
 /*----------------------------------------------------*/
 @import "footer";
