--- a/assets/scss/inner_page/_about-page.scss
+++ b/assets/scss/inner_page/_about-page.scss
@@ -6,6 +6,12 @@
 		line-height: 1.07;
 		padding-bottom: 25px;
 		color: var(--vt-title-color);
+		@media #{$md,$sm,$xs} {
+			font-size: 35px;
+		}
+		@media #{$xxs} {
+			font-size: 30px;
+		}
 	}
 	p {
 		padding-bottom: 25px;
@@ -21,6 +27,10 @@
 	.vt-testimonial-slider {
 		width: 150%;
 		margin-left: -25%;
+		@media #{$sm,$xs} {
+			width: 100%;
+			margin-left: 0;
+		}
 	}
 	.vt-testi-slider-nav .vt-testi-prev {
 		left: 26%;
