--- a/assets/scss/inner_page/_service-details.scss
+++ b/assets/scss/inner_page/_service-details.scss
@@ -14,6 +14,9 @@
 		border-bottom: 1px solid #D9D9D9;
 	}
 }
+.vt-service-details-item-section {
+	overflow: hidden;
+}
 .vt-ser-det-item {
 	max-width: 520px;
 	margin-bottom: 52px;
