--- a/assets/scss/inner_page/_service-page.scss
+++ b/assets/scss/inner_page/_service-page.scss
@@ -12,7 +12,8 @@
 .vt-service-item-feed {
 	margin-bottom: 80px;
 	.item-img {
-		width: 384px;
+		width: 100%;
+		max-width: 384px;
 		height: 180px;
 		margin-bottom: 26px;
 		&:before {
@@ -25,6 +26,11 @@
 			mix-blend-mode: color;
 			background-color: #D9D9D9;
 			transition: all 500ms ease;
+		}
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 	.item-text {
